[gd_scene load_steps=16 format=2]

[ext_resource path="res://assets/main_menu/title.png" type="Texture" id=1]
[ext_resource path="res://assets/main_menu/Continues.png" type="Texture" id=2]
[ext_resource path="res://assets/main_menu/New Game.png" type="Texture" id=3]
[ext_resource path="res://assets/main_menu/hinh2.png" type="Texture" id=4]
[ext_resource path="res://assets/main_menu/quit.png" type="Texture" id=5]
[ext_resource path="res://scripts/MainMenu.gd" type="Script" id=9]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.4, 0.439216, 0.74902, 1 )
corner_radius_top_left = 75
corner_radius_top_right = 75
corner_radius_bottom_right = 75
corner_radius_bottom_left = 75

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.211765, 0.32549, 0.776471, 1 )
corner_radius_top_left = 75
corner_radius_top_right = 75
corner_radius_bottom_right = 75
corner_radius_bottom_left = 75

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.788235, 0.556863, 0.443137, 1 )
corner_radius_top_left = 75
corner_radius_top_right = 75
corner_radius_bottom_right = 75
corner_radius_bottom_left = 75

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.803922, 0.290196, 0.290196, 1 )
corner_radius_top_left = 75
corner_radius_top_right = 75
corner_radius_bottom_right = 75
corner_radius_bottom_left = 75

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.709804, 0.486275, 0.968627, 1 )
corner_radius_top_left = 75
corner_radius_top_right = 75
corner_radius_bottom_right = 75
corner_radius_bottom_left = 75

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.498039, 0.184314, 0.882353, 1 )
corner_radius_top_left = 75
corner_radius_top_right = 75
corner_radius_bottom_right = 75
corner_radius_bottom_left = 75

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[node name="MainMenu" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 128.0
custom_constants/margin_right = 120
custom_constants/margin_top = 80
custom_constants/margin_left = 120
custom_constants/margin_bottom = 80
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="Control" parent="."]
margin_left = 120.0
margin_top = 80.0
margin_right = 1246.0
margin_bottom = 816.0

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 1004.0
margin_bottom = 736.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Titles" type="TextureRect" parent="HBoxContainer/VBoxContainer2"]
margin_right = 600.0
margin_bottom = 180.0
rect_min_size = Vector2( 600, 180 )
rect_clip_content = true
input_pass_on_modal_close_click = false
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource( 1 )
expand = true

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/VBoxContainer2"]
margin_top = 184.0
margin_right = 1004.0
margin_bottom = 615.0

[node name="NewGame" type="Button" parent="HBoxContainer/VBoxContainer2/VBoxContainer"]
margin_right = 380.0
margin_bottom = 141.0
rect_min_size = Vector2( 200, 141 )
size_flags_horizontal = 0
size_flags_vertical = 0
size_flags_stretch_ratio = 0.7
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
icon = ExtResource( 3 )

[node name="Continues" type="Button" parent="HBoxContainer/VBoxContainer2/VBoxContainer"]
margin_top = 145.0
margin_right = 353.0
margin_bottom = 286.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
icon = ExtResource( 2 )

[node name="Quit Game" type="Button" parent="HBoxContainer/VBoxContainer2/VBoxContainer"]
margin_top = 290.0
margin_right = 375.0
margin_bottom = 431.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 8 )
custom_styles/normal = SubResource( 9 )
icon = ExtResource( 5 )

[node name="CenterContainer" type="CenterContainer" parent="HBoxContainer"]
margin_left = 500.0
margin_top = 300.0
margin_right = 1273.0
margin_bottom = 753.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/CenterContainer"]
margin_left = 136.0
margin_top = 76.0
margin_right = 636.0
margin_bottom = 376.0
rect_min_size = Vector2( 500, 300 )
texture = ExtResource( 4 )
expand = true

[connection signal="pressed" from="HBoxContainer/VBoxContainer2/VBoxContainer/NewGame" to="." method="_on_NewGame_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer2/VBoxContainer/Continues" to="." method="_on_Continues_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer2/VBoxContainer/Quit Game" to="." method="_on_Quit_Game_pressed"]
